feat: Ajuste unico endpoint y actualización sql udistrital/argo_documentacion/issues/315
